<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">


    <ScrollView
        android:id="@+id/detail_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_marginBottom="4dp"
                    android:scaleType="centerCrop"
                    tools:src="@color/colorAccent"
                    android:contentDescription="@string/share"/>

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:fontFamily="@font/sf_pro_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/book_title" />

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    tools:text="@string/book_author" />

                <RatingBar
                    android:id="@+id/book_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_author"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5" />
            </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_regular"
                android:lines="15"
                tools:text="@string/book_desc"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/book_type"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/book_type"
                android:fontFamily="@font/sf_pro_medium"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/book_genre"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_toEndOf="@id/book_type"
                android:text="@string/book_genre"
                android:fontFamily="@font/sf_pro_medium"
                android:textSize="12sp"/>

        </RelativeLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
