<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/sf_pro_bold"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/book_title" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/sf_pro_regular"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            tools:text="@string/book_author" />

        <TextView
            android:id="@+id/book_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_author"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="@font/sf_pro_medium"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            tools:text="@string/book_type"/>

        <RatingBar
            style = "?android:attr/ratingBarStyleSmall"
            android:id="@+id/book_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_type"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>